examples/negative/parser_syntax/let_keyword_pattern.kai
# Negative fixture (#520 / parser): a reserved keyword (`fn`) is
# used where a pattern is required. The parser must reject with
# an "expected pattern" diagnostic anchored at the keyword.

fn main() : Int {
  let fn = 1
  fn
}
